deploy/kustomize/base/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: production
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - image: website
          imagePullPolicy: IfNotPresent
          name: website
          livenessProbe:
            httpGet:
              path: "/"
              port: 1323
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: "/"
              port: 1323
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "150m"
          ports:
            - containerPort: 1323
              protocol: TCP
