deploy/kustomize/base/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: production
  labels:
    app: website
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 1323
  selector:
    app: website
